// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Menu should match snapshot with id 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  id="test-id"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing disabled 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing disabled in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={false}
  pluginMenuItems={Array []}
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing enabled 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink="test"
  canCreateOrDeleteCustomEmoji={true}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={true}
  enableCustomEmoji={true}
  enableEmailInvitations={true}
  enableIncomingWebhooks={true}
  enableOAuthServiceProvider={true}
  enableOutgoingWebhooks={true}
  enablePluginMarketplace={true}
  enableUserCreation={true}
  experimentalPrimaryTeam="test"
  helpLink="test-link-help"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={true}
  pluginMenuItems={Array []}
  reportAProblemLink="test-report-link"
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with most of the thing enabled in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink="test"
  canCreateOrDeleteCustomEmoji={true}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={true}
  enableCustomEmoji={true}
  enableEmailInvitations={true}
  enableIncomingWebhooks={true}
  enableOAuthServiceProvider={true}
  enableOutgoingWebhooks={true}
  enablePluginMarketplace={true}
  enableUserCreation={true}
  experimentalPrimaryTeam="test"
  helpLink="test-link-help"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={true}
  pluginMenuItems={Array []}
  reportAProblemLink="test-report-link"
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with plugins 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={false}
  moreTeamsToJoin={false}
  pluginMenuItems={
    Array [
      Object {
        "action": [MockFunction],
        "id": "plugin-1",
        "mobileIcon": "plugin-1-mobile-icon",
        "text": "plugin-1-text",
      },
      Object {
        "action": [MockFunction],
        "id": "plugin-2",
        "mobileIcon": "plugin-2-mobile-icon",
        "text": "plugin-2-text",
      },
    ]
  }
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;

exports[`components/Menu should match snapshot with plugins in mobile 1`] = `
<MainMenu
  actions={
    Object {
      "closeRhsMenu": [MockFunction],
      "closeRightHandSide": [MockFunction],
      "getSubscriptionStats": [MockFunction],
      "openModal": [MockFunction],
      "showFlaggedPosts": [MockFunction],
      "showMentions": [MockFunction],
      "unhideNextSteps": [MockFunction],
    }
  }
  appDownloadLink={null}
  canCreateOrDeleteCustomEmoji={false}
  canManageIntegrations={true}
  canManageSystemBots={false}
  currentUser={
    Object {
      "allow_marketing": false,
      "auth_data": "",
      "auth_service": "",
      "bot_description": "",
      "bot_last_icon_update": 0,
      "create_at": 0,
      "delete_at": 0,
      "email": "",
      "email_verified": true,
      "failed_attempts": 0,
      "first_name": "",
      "id": "user_id",
      "is_bot": false,
      "last_activity_at": 0,
      "last_name": "",
      "last_password_update": 0,
      "last_picture_update": 0,
      "locale": "",
      "mfa_active": false,
      "mfa_secret": "",
      "nickname": "",
      "notify_props": Object {
        "channel": "false",
        "comments": "never",
        "desktop": "default",
        "desktop_sound": "false",
        "email": "false",
        "first_name": "false",
        "mark_unread": "mention",
        "mention_keys": "",
        "push": "none",
        "push_status": "offline",
      },
      "password": "",
      "position": "",
      "props": Object {},
      "roles": "",
      "terms_of_service_create_at": 0,
      "terms_of_service_id": "",
      "update_at": 0,
      "username": "some-user",
    }
  }
  enableCommands={false}
  enableCustomEmoji={false}
  enableEmailInvitations={false}
  enableIncomingWebhooks={false}
  enableOAuthServiceProvider={false}
  enableOutgoingWebhooks={false}
  enablePluginMarketplace={false}
  enableUserCreation={false}
  experimentalPrimaryTeam={null}
  helpLink={null}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "defaultRichTextElements": undefined,
      "formatDate": [Function],
      "formatDateTimeRange": [Function],
      "formatDateToParts": [Function],
      "formatDisplayName": [Function],
      "formatList": [Function],
      "formatListToParts": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatNumberToParts": [Function],
      "formatPlural": [Function],
      "formatRelativeTime": [Function],
      "formatTime": [Function],
      "formatTimeToParts": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getDisplayNames": [Function],
        "getListFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralRules": [Function],
        "getRelativeTimeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "onError": [Function],
      "textComponent": "span",
      "timeZone": "Etc/UTC",
    }
  }
  isCloud={false}
  isMentionSearch={false}
  mobile={true}
  moreTeamsToJoin={false}
  pluginMenuItems={
    Array [
      Object {
        "action": [MockFunction],
        "id": "plugin-1",
        "mobileIcon": "plugin-1-mobile-icon",
        "text": "plugin-1-text",
      },
      Object {
        "action": [MockFunction],
        "id": "plugin-2",
        "mobileIcon": "plugin-2-mobile-icon",
        "text": "plugin-2-text",
      },
    ]
  }
  reportAProblemLink={null}
  showGettingStarted={false}
  subscription={Object {}}
  teamId="team-id"
  teamIsGroupConstrained={false}
  teamName="team_name"
  teamType="O"
  userIsAdmin={true}
/>
`;
